# MinerU-MCP

./: .gitignore  .mcp.json  .smithery-config-schema.json  README.md  README_EN.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.py  smithery.yaml
.claude/skills/convert-to-markdown/: SKILL.md
.claude/skills/mineru-convert/: SKILL.md
.claude/skills/pdf-to-markdown/: SKILL.md
.claude/skills/smithery-convert/: SKILL.md
.github/workflows/: publish-pypi.yml  publish.yml
src/: index.ts  main.ts  server-http.ts
src/mineru_mcp/: __init__.py  __main__.py  server.py
