[project]
name = "mineru-converter-mcp-server"
version = "1.0.0rc2"
description = "MCP server for converting documents (PDF, DOC, DOCX, PPT, PPTX, PNG, JPG, JPEG, HTML) to Markdown using MinerU API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.25.0",
    "PyPDF2>=3.0.0",
    "python-pptx>=0.6.21",
    "python-docx>=0.8.11",
    "typer>=0.12.0",
]

[project.scripts]
mineru-converter-mcp-server = "mineru_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mineru_mcp"]
sources = ["src"]
